tests/reference/asr-program_without_line_cc-b84ba02.stderr
syntax error: Expected program end
 --> tests/errors/program_without_line_cc.f90:1:1 - 2:8
  |
1 |    print *, "OK"
  |    ^^^^^^^^^^^^^...
...
  |
2 |    contains
  | ...^^^^^^^^ 

semantic error: Variable 'contains' is not declared
 --> tests/errors/program_without_line_cc.f90:2:1
  |
2 | contains
  | ^^^^^^^^ 'contains' is undeclared
